<resources>
    <string name="app_name" translatable="false">VeggieLink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">mail</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Join Us!</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="tst_RegisterSuc">User has been registered successfully!</string>
    <string name="tst_RegisterFail">Failed to register! Try again.</string>
    <string name="tst_fillEverything">Enter email and password!</string>
    <string name="tst_error">Error</string>
    <string name="tst_diffpass">Passwords don\'t match</string>
    <string name="tst_usercreated">User Created!</string>
    <string name="tst_log_ok">Login Successful</string>
    <string name="sw_on">Read data</string>
    <string name="txtSelectPhoto">Select Photo</string>
    <string name="alertD_logout">Logout</string>
    <string name="alertDMessg_logout">Are you shure you want to logout?</string>
    <string name="txt_temp">Temperature</string>
    <string name="txt_hum">Humidity</string>
    <string name="txt_light">Luminosity</string>
    <string name="btn_bleconnect">Connect to device</string>
    <string name="btn_changeUserSettings">Change User Settings</string>
    <string name="menu_control">Control</string>
    <string name="txt_edit_name">Insert new name</string>
    <string name="btn_set_settings">Accept Changes</string>
    <string name="btn_addphotogal">Gallery</string>
    <string name="btn_takephoto">Take Photo</string>
    <string name="btn_bleread">Read Temperature</string>
    <string name="btn_blewrite" translatable="false">LED</string>
    <string name="waiting_data">"Waiting for data "</string>
    <string name="read_command">Enter read command</string>
    <string name="btn_read_hum">Read Humidity</string>
    <string name="btn_read_lum">Read Luminosity</string>
    <string name="presets">Change preset</string>
    <string name="carrot">Carrot</string>
    <string name="pot">Potato</string>
    <string name="Lett">Lettuce</string>
    <string name="Pep">Bell Pepper</string>
    <string name="Rad">Radish</string>
    <string name="Broc">Broccoli</string>
    <string name="Beet">Beetroot</string>
    <string name="Champ">Champignon</string>
    <string name="Tom">Tomato</string>
    <string name="Temp">Temperature</string>
    <string name="Hum">Humidity</string>
    <string name="Lum">Luminosity</string>
    <string name="Max" translatable="false">Max.</string>
    <string name="Min" translatable="false">Min.</string>
    <string name="Custm_p">Custom Preset</string>
    <string name="Custm_p_q">Create a custom preset?</string>
    <string name="menu_analytics">Data Analytics</string>
    <string name="MaxMin_err">Min values can\'t be greater than Max values!</string>
    <string name="Fill_all">Fill all values!</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected!</string>
    <string name="devnotfound">Device not found!</string>
    <string name="reg_email" >Please enter your email</string>
    <string name="reg_pass" >Please enter your password</string>
    <string name="reg_pass_inv" >The given password is invalid. Password should be at least 6 characters!</string>
    <string name="reg_conf_pass" >Please confirm your password</string>
    <string name="aut_fail" >Authentication failed</string>
    <string name="tst_UploadFireError">Error uploading to Firebase!</string>
    <string name="tst_NoDevices">No device connected!</string>
    <string name="tst_CameraPermission">Camera Permission is Required to use camera!</string>
    <string name="tst_NoImage">No image selected!</string>
    <string name="info" translatable="false">Info</string>
    <string name="info_ad">PDM project\nMade by:\nGonçalo Lopes 2181775\nMateo Rodríguez 2182076</string>
    <string name="menu_activity">Activity</string>
    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>
    <string name="manual">Manual Control</string>
    <string name="wind">Window</string>
    <string name="sprink">Irrigation</string>
    <string name="Heat">Heating</string>
</resources>