<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/greenhouse"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/remote"
            android:title="@string/menu_control" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/preferences_user"
            android:title="@string/menu_settings" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:onClick="onClickLogOut"
            android:title="@string/menu_logout" />
    </group>
</menu>