<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        style ="@style/Theme.PDMG2.LogIn"
        android:layout_above="@id/tv_subtitle"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/tv_subtitle"
        style ="@style/Theme.PDMG2.LogIn"
        android:layout_above="@id/txtlogemail"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/txtlogemail"
        style="@style/Theme.PDMG2.LogIn_credentials"
        android:layout_above="@id/txtlogpass"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/txtlogpass"
        style="@style/Theme.PDMG2.LogIn_credentials"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Theme.PDMG2.LogIn_Button"
        android:layout_below="@id/txtlogpass"
        android:layout_marginTop="15dp"
        android:onClick="onClickLogin"
        android:text="@string/login"
        tools:ignore="OnClick" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp" />

</RelativeLayout>