<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        style ="@style/Theme.PDMG2.LogIn"
        android:text="@string/register"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_subtitle"
        style ="@style/Theme.PDMG2.LogIn"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/txtregname"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        style ="@style/Theme.PDMG2.LogIn_credentials"/>

    <EditText
        android:id="@+id/txtregemail"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        style ="@style/Theme.PDMG2.LogIn_credentials" />

    <EditText
        android:id="@+id/txtregpass"
        style="@style/Theme.PDMG2.LogIn_credentials"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/txtregpass2"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        style ="@style/Theme.PDMG2.LogIn_credentials"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_reg_fingerprint"
            style="@style/Theme.PDMG2.LogIn_Button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="onClickRegFing"
            android:text="@string/btn_reg_fingerprint" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Theme.PDMG2.LogIn_Button"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:onClick="OnClickRegister"
            android:text="@string/register"
            tools:ignore="OnClick" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>